welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:7: error: type mismatch;
 found   : Unit
 required: Boolean
		return avance();
                             ^SlugTracking:13: error: type mismatch;
 found   : Unit
 required: Boolean
		avance();
                      ^